--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="C:/Users/lluna/workspace/CS240/Jama-1.0.3.jar"/>
+	<classpathentry kind="lib" path="/Users/MrTiriti/Documents/workspace2/CS240/Jama-1.0.3.jar"/>
+	<classpathentry kind="lib" path="/Users/MrTiriti/Documents/workspace2/CS240/JSAT-0.0.6.jar" sourcepath="/Users/MrTiriti/Documents/workspace2/CS240/JSAT-0.0.6-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/Users/MrTiriti/Documents/workspace2/CS240/JSAT-0.0.6-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
